MyFirstProject/src/objects/Bill__c.object
<CustomObject>
    <description>Its 2nd object</description>
    <fields>
        <fullName>Bill_number__c</fullName>
        <displayFormat>B-{00000}</displayFormat>
        <label>Bill number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>it show status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>